--- a/src/main/resources/com/manager/datamanager/change-teacher.fxml
+++ b/src/main/resources/com/manager/datamanager/change-teacher.fxml
@@ -6,18 +6,27 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.manager.datamanager.AdminController">
    <children>
-      <Label layoutX="47.0" layoutY="38.0" prefHeight="34.0" prefWidth="246.0" text="Додати викладача">
+      <Label layoutX="47.0" layoutY="24.0" prefHeight="34.0" prefWidth="246.0" text="Додати викладача">
          <font>
             <Font size="17.0" />
          </font></Label>
-      <Button fx:id="backBtnTtoA" layoutX="47.0" layoutY="331.0" mnemonicParsing="false" onAction="#adminChangeTeacherBack" text="Назад" textFill="#f82626" />
-      <Label fx:id="nameLabel" layoutX="77.0" layoutY="89.0" prefHeight="16.0" prefWidth="60.0" text="Ім'я" />
-      <Label fx:id="lastnameLabel" layoutX="77.0" layoutY="113.0" prefHeight="16.0" prefWidth="76.0" text="Прізвище" />
+      <Button fx:id="backBtnTtoA" layoutX="453.0" layoutY="29.0" mnemonicParsing="false" onAction="#adminChangeTeacherBack" text="Назад" textFill="#f82626" />
+      <Label fx:id="nameLabel" layoutX="77.0" layoutY="70.0" prefHeight="16.0" prefWidth="60.0" text="Ім'я" />
+      <Label fx:id="lastnameLabel" layoutX="77.0" layoutY="108.0" prefHeight="16.0" prefWidth="76.0" text="Прізвище" />
       <Label fx:id="emailLabel" layoutX="77.0" layoutY="138.0" prefHeight="16.0" prefWidth="76.0" text="email" />
-      <Label fx:id="passwordLabel" layoutX="77.0" layoutY="169.0" prefHeight="16.0" prefWidth="76.0" text="Пароль" />
-      <Label fx:id="headOfLabel" layoutX="77.0" layoutY="199.0" text="Куратор групи" />
-      <Label fx:id="ageLabel" layoutX="77.0" layoutY="229.0" text="Вік" />
-      <Label fx:id="genderLabel" layoutX="77.0" layoutY="259.0" text="Стать" />
-      <Label fx:id="subjectLabel" layoutX="77.0" layoutY="289.0" text="Предмети" />
+      <Label fx:id="passwordLabel" layoutX="77.0" layoutY="168.0" prefHeight="16.0" prefWidth="76.0" text="Пароль" />
+      <Label fx:id="headOfLabel" layoutX="77.0" layoutY="198.0" text="Куратор групи" />
+      <Label fx:id="ageLabel" layoutX="77.0" layoutY="228.0" text="Вік" />
+      <Label fx:id="genderLabel" layoutX="77.0" layoutY="258.0" text="Стать" />
+      <Label fx:id="subjectLabel" layoutX="77.0" layoutY="288.0" text="Предмети" />
+      <TextField fx:id="nameTextField" layoutX="231.0" layoutY="74.0" prefHeight="24.0" prefWidth="200.0" />
+      <TextField fx:id="lastnameTextField" layoutX="231.0" layoutY="104.0" prefHeight="24.0" prefWidth="200.0" />
+      <TextField fx:id="emailTextField" layoutX="231.0" layoutY="134.0" prefHeight="24.0" prefWidth="200.0" />
+      <PasswordField fx:id="passwordPField" layoutX="231.0" layoutY="164.0" prefHeight="24.0" prefWidth="200.0" />
+      <TextField fx:id="headOfTextField" layoutX="231.0" layoutY="194.0" prefHeight="24.0" prefWidth="200.0" />
+      <TextField fx:id="genderTextField" layoutX="231.0" layoutY="254.0" prefHeight="24.0" prefWidth="119.0" />
+      <TextArea fx:id="subjectTextArea" layoutX="231.0" layoutY="289.0" prefHeight="80.0" prefWidth="252.0" wrapText="true" />
+      <TextField fx:id="ageTextField" layoutX="231.0" layoutY="224.0" prefHeight="24.0" prefWidth="119.0" />
+      <Button fx:id="addNewTeacherBtn" layoutX="70.0" layoutY="329.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="76.0" text="Додати" textFill="#46b207" />
    </children>
 </AnchorPane>
