refactor SQL connection

--- a/src/main/resources/com/manager/datamanager/change-teacher.fxml
+++ b/src/main/resources/com/manager/datamanager/change-teacher.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.manager.datamanager.controllers.TeacherCRUDController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.manager.datamanager.controllers.TeacherCreateController">
    <children>
       <Label fx:id="headerLabel" layoutX="47.0" layoutY="24.0" prefHeight="34.0" prefWidth="246.0" text="Додати викладача">
          <font>
