--- a/src/main/resources/com/manager/datamanager/admin.fxml
+++ b/src/main/resources/com/manager/datamanager/admin.fxml
@@ -12,12 +12,12 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Button fx:id="TeacherEditBtn" layoutX="98.0" layoutY="105.0" mnemonicParsing="false" onAction="#adminChangeTeacher" prefHeight="38.0" prefWidth="252.0" text="Редагування викладачів">
+      <Button fx:id="TeacherEditBtn" layoutX="98.0" layoutY="105.0" mnemonicParsing="false" onAction="#adminChangeTeacher" prefHeight="38.0" prefWidth="161.0" text="Додати викладача">
          <cursor>
             <Cursor fx:constant="CLOSED_HAND" />
          </cursor>
       </Button>
-      <Button fx:id="StudentEditBtn" layoutX="98.0" layoutY="162.0" mnemonicParsing="false" onAction="#adminChangeStudent" prefHeight="38.0" prefWidth="252.0" text="Редагування студентів">
+      <Button fx:id="StudentEditBtn" layoutX="98.0" layoutY="162.0" mnemonicParsing="false" onAction="#adminChangeStudent" prefHeight="38.0" prefWidth="161.0" text="Редагування студентів">
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
@@ -27,5 +27,6 @@
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
       </Button>
+      <Button layoutX="280.0" layoutY="105.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="161.0" text="Переглянути дані" onAction="#adminShowTeacher" />
    </children>
 </AnchorPane>
