--- a/src/main/resources/com/manager/datamanager/show-teacher.fxml
+++ b/src/main/resources/com/manager/datamanager/show-teacher.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.scene.Cursor?>
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.manager.datamanager.controllers.TeacherShowController">
   <tabs>
     <Tab id="1" fx:id="firstTab" text="Всі викладачі">
@@ -26,14 +27,35 @@
                  <TextField fx:id="lastnameTextField" editable="false" layoutX="231.0" layoutY="104.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="200.0" />
                  <TextField fx:id="emailTextField" editable="false" layoutX="231.0" layoutY="134.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="200.0" />
                  <TextField fx:id="headOfTextField" editable="false" layoutX="231.0" layoutY="164.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="200.0" />
-                 <TextField fx:id="genderTextField" editable="false" layoutX="231.0" layoutY="194.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="119.0" />
-                 <TextField fx:id="ageTextField" editable="false" layoutX="231.0" layoutY="224.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="119.0" />
+                 <TextField fx:id="ageTextField" editable="false" layoutX="231.0" layoutY="194.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="119.0" />
+                 <TextField fx:id="genderTextField" editable="false" layoutX="231.0" layoutY="224.0" onKeyPressed="#keyDefiner" prefHeight="24.0" prefWidth="119.0" />
                  <TextArea fx:id="subjectTextArea" editable="false" layoutX="231.0" layoutY="254.0" onKeyPressed="#keyDefiner" prefHeight="60.0" prefWidth="200.0" />
-                  <Label fx:id="teacherNumber" layoutX="465.0" layoutY="299.0" text="Label" />
+                  <Label fx:id="teacherNumber" layoutX="465.0" layoutY="78.0" text="Label" />
                   <Button layoutX="122.0" layoutY="295.0" mnemonicParsing="false" onAction="#showNextTeacher" onKeyPressed="#keyDefiner" text="🠖" />
                   <Button layoutX="82.0" layoutY="295.0" mnemonicParsing="false" onAction="#showPrevTeacher" onKeyPressed="#keyDefiner" text="🠔" />
-                   <Button fx:id="deleteSubjectBtn" layoutX="163.0" layoutY="295.0" mnemonicParsing="false" onAction="#deleteTeacher" text="🗑" textAlignment="CENTER" textFill="#f51f1f">
+                   <Button fx:id="deleteTeacherBtn" layoutX="541.0" layoutY="295.0" mnemonicParsing="false" onAction="#deleteTeacher" text="🗑" textAlignment="CENTER" textFill="#f51f1f" />
+                   <Button fx:id="editTeacherBtn" layoutX="501.0" layoutY="295.0" onAction="#editTeacher" text="✎" textAlignment="CENTER" textFill="darkcyan" />
+                   <Button fx:id="confirmEditingBtn" layoutX="469.0" visible="false" layoutY="135.0" onAction="#confirmEdit" text="✓" textAlignment="CENTER" textFill="green" />
+                   <Button fx:id="cancelEditBtn" layoutX="469.0" visible="false" layoutY="104.0" onAction="#cancelEdit" text="✗" textAlignment="CENTER" textFill="red" />
+<!--               editing mode subject input-->
+                   <TextField fx:id="subjectTextField" visible="false" layoutX="231.0" layoutY="254.0" prefHeight="24.0" prefWidth="200.0" />
+                   <Button fx:id="newSubjectButton" visible="false" layoutX="442.0" layoutY="284.0" mnemonicParsing="false" onAction="#subjectHandler" text="+" textAlignment="CENTER" textFill="green">
+                       <cursor>
+                           <Cursor fx:constant="HAND" />
+                       </cursor>
                    </Button>
+                   <Label fx:id="subjectStatus" layoutX="184.0" visible="false" layoutY="254.0" prefHeight="24.0" prefWidth="36.0" text="0" textAlignment="CENTER">
+                       <cursor>
+                           <Cursor fx:constant="WAIT" />
+                       </cursor></Label>
+                   <Button fx:id="deleteSubjectBtn" layoutX="483.0" visible="false" layoutY="284.0" mnemonicParsing="false" onAction="#subjectDeleteOne" text="🗑" textAlignment="CENTER" textFill="#f51f1f">
+                       <cursor>
+                           <Cursor fx:constant="HAND" />
+                       </cursor>
+                   </Button>
+<!--                   end editing mode-->
+
+
                </children></AnchorPane>
       </content>
     </Tab>
