--- a/src/main/resources/com/manager/datamanager/admin.fxml
+++ b/src/main/resources/com/manager/datamanager/admin.fxml
@@ -17,7 +17,7 @@
             <Cursor fx:constant="CLOSED_HAND" />
          </cursor>
       </Button>
-      <Button fx:id="StudentEditBtn" layoutX="98.0" layoutY="162.0" mnemonicParsing="false" onAction="#adminChangeStudent" prefHeight="38.0" prefWidth="161.0" text="Редагування студентів">
+      <Button fx:id="StudentEditBtn" layoutX="98.0" layoutY="162.0" mnemonicParsing="false" onAction="#adminChangeStudent" prefHeight="38.0" prefWidth="161.0" text="Додати студента">
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
@@ -28,5 +28,6 @@
          </cursor>
       </Button>
       <Button layoutX="280.0" layoutY="105.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="161.0" text="Переглянути дані" onAction="#adminShowTeacher" />
+      <Button layoutX="280.0" layoutY="162.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="161.0" text="Переглянути дані" onAction="#adminShowStudent" />
    </children>
 </AnchorPane>
