--- a/src/main/resources/com/manager/datamanager/admin.fxml
+++ b/src/main/resources/com/manager/datamanager/admin.fxml
@@ -22,7 +22,7 @@
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
       </Button>
-      <Button fx:id="ExitBtn" layoutX="464.0" layoutY="325.0" mnemonicParsing="false" onAction="#exit" prefHeight="38.0" prefWidth="84.0" text="Вийти" textFill="#fc0a0a">
+      <Button fx:id="ExitBtn" layoutX="464.0" layoutY="325.0" mnemonicParsing="false" onAction="#logout" prefHeight="38.0" prefWidth="84.0" text="Вийти" textFill="#fc0a0a">
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
